Changes
=======

1.1 (unreleased)
----------------

* ...

1.0.1 (2008-08-07)
------------------

* Added a ``meta.zcml`` file so that the ``<unconfigure>`` directive
  can actually be registered from ZCML.

1.0 (2008-08-07)
----------------

First public release.